<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_onboarding_invitation_share_title"
            android:text="@string/onboarding_invitation_share_title_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="30dp"
            style="@style/Typography.S24"
            android:textColor="@color/grey_4f"
            android:layout_marginTop="42dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_onboarding_invitation_share_sub_title"
            android:text="@string/onboarding_invitation_share_sub_title_text"
            style="@style/Typography.M16"
            android:textColor="@color/grey_bd"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_onboarding_invitation_share_title"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginTop="71dp"
            app:layout_constraintBottom_toTopOf="@id/tv_onboarding_invitation_share_later"
            android:src="@drawable/img_invitation"
            app:layout_constraintTop_toBottomOf="@id/tv_onboarding_invitation_share_sub_title"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/tv_onboarding_invitation_share_later"
            tools:text="나중에 초대할게요"
            style="@style/Typography.M15"
            android:layout_marginBottom="14dp"
            android:textColor="@color/grey_bd"
            app:layout_constraintBottom_toTopOf="@id/btn_onboarding_invitation_share_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/btn_onboarding_invitation_share_link"
            app:layout_constraintEnd_toEndOf="@+id/btn_onboarding_invitation_share_link" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginHorizontal="30dp"
            android:id="@+id/btn_onboarding_invitation_share_link"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="34dp"
            android:background="@drawable/shape_green_radius_47_1"
            style="@style/Typography.S16"
            android:textColor="@color/white"
            android:paddingVertical="15dp"
            android:text="@string/onboarding_invitation_share_family_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>