<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.zooczoocbbangbbang.presentation.main.ymrecord.RecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.ymrecord.YmRecordActivity">

        <androidx.fragment.app.FragmentContainerView
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="69dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:name="org.sopt.zooczoocbbangbbang.presentation.main.ymrecord.daily.DailyFragment"
            tools:layout="@layout/fragment_daily"
            app:layout_constraintTop_toBottomOf="@id/cl_ym_record_top"
            app:layout_constraintBottom_toTopOf="@id/btn_ym_record_next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fcv_ym_record" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Typography.S16"
            android:textColor="@color/white_ff"
            android:text="@string/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ym_record_next"
            android:background="@{viewModel.buttonEnable ? @drawable/shape_green_radius_47 : @drawable/shape_grey_radius_47}"
            android:enabled="@{viewModel.buttonEnable}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="44dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cl_ym_record_top"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_close"
                android:id="@+id/iv_ym_record_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="17dp"
                android:layout_marginTop="29dp" />

            <TextView
                android:text="@string/record_mission"
                style="@style/Typography.S16"
                android:textColor="@color/grey_bd"
                android:paddingHorizontal="14dp"
                android:paddingVertical="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ym_record_mission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:text="@string/record_write"
                style="@style/Typography.S16"
                android:textColor="@color/grey_4f"
                android:paddingHorizontal="14dp"
                android:paddingVertical="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ym_record_daily"
                app:layout_constraintEnd_toStartOf="@+id/tv_ym_record_mission"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_ym_record_mission" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>