<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.main.record.CustomDialogFragment">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_dialog_background"
            android:layout_width="299dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/white_f8"
            app:layout_constraintDimensionRatio="299:174"
            android:background="@color/white_ff"
            android:layout_marginEnd="1dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="229dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_dialog_title"
                    android:text="@string/customDialog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Typography.S18"
                    android:textColor="@color/grey_4f"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="41dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="64dp"
                    android:layout_marginEnd="65dp" />

                <TextView
                    android:id="@+id/tv_dialog_subtitle"
                    android:text="@string/customDialog_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Typography.M14"
                    android:textColor="@color/grey_bd"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title"
                    android:layout_marginTop="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="39dp"
                    android:layout_marginEnd="40dp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:background="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dialog_subtitle"
                    android:layout_marginTop="30dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_dialog_relaywrite_background"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/green_42c87f">

                        <TextView
                            android:id="@+id/tv_dialog_relaywrite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/customDialog_relaywrite"
                            android:textColor="@color/white_ff"
                            style="@style/Typography.S16"
                            android:layout_marginVertical="15dp"
                            android:layout_marginHorizontal="60dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_dialog_quit_background"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/white_f2">

                        <TextView
                            android:id="@+id/tv_dialog_quit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/customDialog_quit"
                            android:textColor="@color/grey_33"
                            style="@style/Typography.S16"
                            android:layout_marginVertical="15dp"
                            android:layout_marginHorizontal="60dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
